--- a/listings/templates/listings/confirm_delete.template.html
+++ b/listings/templates/listings/confirm_delete.template.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     are you sure you want to delete the listing: {{listing}}
+    <form method="POST">
+        {% csrf_token %}
+        Are you sure you want to delete?
+        <input type="submit" value ="Yes">
+    </form>
 </body>
 </html>
