--- a/listings/templates/listings/index.template.html
+++ b/listings/templates/listings/index.template.html
@@ -1,14 +1,7 @@
-{% load static %}
+{% extends 'base.template.html' %}
+{%load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-    <title>Document</title>
-</head>
-<body>
+{%block content%}
     display user logged in
     {% if request.user.is_authenticated  %}
     <p>Welcome {{request.user}}</p>
@@ -22,5 +15,4 @@
         <a href="{% url 'delete_listing_route' listing_id=list.id %}">Delete</a>
         </li>
     {% endfor %}
-</body>
-</html>
+{%endblock%}
