--- a/listings/templates/listings/confirm_delete.template.html
+++ b/listings/templates/listings/confirm_delete.template.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.template.html' %}
+{%load static %}
+
+{%block content%}
+    
     are you sure you want to delete the listing: {{listing}}
     <form method="POST">
         {% csrf_token %}
         Are you sure you want to delete?
         <input type="submit" value ="Yes">
     </form>
-</body>
-</html>
+
+{%endblock%}
+
+
+
+
+
