--- a/listings/templates/listings/edit_listing.template.html
+++ b/listings/templates/listings/edit_listing.template.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.template.html' %}
+{%load static %}
+
+{%block content%}
+    
     <h1>editing {{listing.title}}</h1>
     <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit"/>
     </form>
-</body>
-</html>
+
+{%endblock%}
+
+
+
+
+
