--- a/listings/templates/listings/sellers.template.html
+++ b/listings/templates/listings/sellers.template.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% extends 'base.template.html' %}
+{%load static %}
+
+{%block content%}
+    
 <body>
     Sellers
     {% for sell in sellers %}
     <li>{{sell.seller_name}}</li>
     {% endfor %}
 </body>
-</html>
+
+{%endblock%}
+
+
+
