--- a/listings/templates/listings/create_listing.template.html
+++ b/listings/templates/listings/create_listing.template.html
@@ -1,11 +1,13 @@
 {% extends 'base.template.html' %}
 {%load static %}
+{%load crispy_forms_tags %}
 
 {%block content%}
     
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
+        <!-- {{ form.as_p }} -->
         <input type ="submit"/>
     </form>
 
