--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -16,6 +16,21 @@
 <body>
     <div class="container">
 
+ <nav class="navbar navbar-expand-sm bg-light">
+        <!-- Links -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'view_listing_route' %}">Listings</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'view_cart' %}">Cart ({{number_of_items}})</a>
+          </li>
+        </ul>
+      </nav>
+
         {% if messages %}
         <div class='alert alert-success'>
             {% for message in messages %} <p>{{ message }}</p> {% endfor %}
