change listing page to card view

--- a/cart/templates/cart/view_cart.template.html
+++ b/cart/templates/cart/view_cart.template.html
@@ -16,7 +16,7 @@
                 <input class="btn btn-primary btn-sm" type="submit" value="Update Quantity">
             </form>
          </div>
-            Cost: ${{i.cost}}<br/>
+            Price: ${{i.cost}}<br/>
             <a href="{% url 'remove_from_cart' listing_id=i.id %}" class="btn btn-danger btn-sm">Remove</a>
         </div>
     </div>
