--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -33,6 +33,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
       </li>
+    <li class="nav-item active">
+        <a class="nav-link" href="{% url 'create_listing' %}">Sell <span class="sr-only">(current)</span></a>
+      </li>
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'view_cart' %}">Cart: ({{number_of_items}})</a>
       </li>
@@ -64,16 +67,7 @@ account info
             <a href="/accounts/login">Login / Sign Up</a>
             {%endif%}
   </div>
-
 </nav>    
-
-
-
-
-
-
-
-
 
 
     <div class="container">
