--- a/listings/templates/listings/index.template.html
+++ b/listings/templates/listings/index.template.html
@@ -4,9 +4,10 @@
 {% load mathfilters %}
 
 {%block content%}
+<div class ="col d-flex justify-content-center">
 <div class="card-deck">
 {% for list in listings %}
-<div class="card">
+<div class="card mt-4" style="min-width: 18rem; max-width: 20rem;">
   <!-- <img class="card-img-top" alt="Card image cap"> -->
   <p></p>
   <div class="text-center">
@@ -21,6 +22,6 @@
 </div>
     {% endfor %}
 </div>
-
+</div>
 
 {%endblock%}
