--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -1,3 +1,4 @@
+{%load static %}
 <!doctype html>
 <html lang="en">
 
@@ -11,6 +12,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>{%block title%}{%endblock%}</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 
 <body>
