--- a/listings/templates/listings/details.template.html
+++ b/listings/templates/listings/details.template.html
@@ -1,19 +1,38 @@
 {% extends 'base.template.html' %}
 {% load cloudinary %}
+{% load mathfilters %}
 
 {% block content %}
-<h1>{{listing.title}}</h1>
+<h3>Product Page</h3>
+<div class ="col justify-content-center">
+<div class="card mb-3">
+  <div class="row no-gutters">
+    <div class="col-md-6">
+      <!-- <img src="..." class="card-img" alt="..."> -->
+      {% cloudinary listing.cover width=300 height=300 gravity="faces" crop="fill"%}
+    </div>
+    <div class="col-md-6">
+      <div class="card-body">
+        <h3 class="card-title">{{listing.title}}</h3>
+        <p class="card-text">Description: {{listing.description}}</p>
+            SKU: {{listing.SKU}}
+            <p></p>Category: {{listing.category.category_name}}
+            <p></p>
+Price: ${{listing.cost|div:100|floatformat:2}}
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <a href="{% url 'add_to_cart' listing_id=listing.id %}" class="btn btn-primary">Add To Cart</a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
-{% cloudinary listing.cover %}
 
 <p>
-    SKU: {{listing.SKU}}
+
 </p>
 <p>
-    Description: {{listing.description}}
-</p>
-<p>
-    Category: {{listing.category.category_name}}
+
 </p>
 <p>
     <!-- Seller: {{listing.seller.user}} -->
