--- a/listings/templates/listings/edit_listing.template.html
+++ b/listings/templates/listings/edit_listing.template.html
@@ -4,8 +4,8 @@
 {%load crispy_forms_tags %}
 
 {%block content%}
-    
-    <h1>editing {{listing.title}}</h1>
+
+<h3 class="mt-3">Edit {{listing.title}}</h3>
 
     <div id="form">
 <form method="POST" enctype="multipart/form-data">
