--- a/cart/templates/cart/view_cart.template.html
+++ b/cart/templates/cart/view_cart.template.html
@@ -1,27 +1,62 @@
 {% extends 'base.template.html' %}
-
+{% load mathfilters %}
+{% load cloudinary %}
 {% block content%}
-<h1>My Shopping Cart</h1>
 
-<a href="{% url 'checkout' %}" class="btn btn-success">Checkout</a>
+<h3 class="mt-3">My Cart</h3>
 
-   {%for key, i in cart.items %}
-    <div class="card mt-2 mb-2">       
-        <div class="card-body">
-         <div class="card-title"><h3>{{i.title}}</h3></div>
-         <div>
-            <form method="POST" action="{% url 'update_cart_quantity' listing_id=i.id%}">
+<div class="row d-none d-md-block">
+        <table class="table cart">
+            <thead id="table_head">
+                <tr>
+                    <th scope="col">Image</th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Subtotal</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {%for key, listing in cart.items %}
+                <tr>
+                    <td>{% cloudinary listing.cover width=100 height=100 gravity="faces" crop="fill" %} </td>
+                    <td>{{listing.title}}</td>
+                    <td>
+ <form method="POST" action="{% url 'update_cart_quantity' listing_id=listing.id%}">
                 {% csrf_token %}
-                Quantity:<input type="text" value="{{i.qty}}" name="qty" style="width:40px" />
-                <input class="btn btn-primary btn-sm" type="submit" value="Update Quantity">
+                <input type="text" value="{{listing.qty}}" name="qty" style="width:40px" />
+                <input class="btn btn-primary btn-sm" type="submit" value="Edit">
             </form>
-         </div>
-            Price: ${{i.cost}}<br/>
-            <a href="{% url 'remove_from_cart' listing_id=i.id %}" class="btn btn-danger btn-sm">Remove</a>
-        </div>
-    </div>
-    {%endfor%}
 
+                    </td>
+                    <td>${{listing.cost}}</td>
+                    <td>${{listing.cost|mul:listing.qty|floatformat:2}}</td>
+                    <td>            <a href="{% url 'remove_from_cart' listing_id=listing.id %}" class="btn btn-danger btn-sm">Delete</a></td>
+                </tr>
 
+                {%endfor%} 
+                
+
+                <tr class="delivery" id="delivery_tablet">
+                    <td>nil </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td colspan="12">nil</td>
+                </tr>
+                <tr class="free_delivery" id="free_delivery_tablet">
+                    <td colspan="12"><small>nil</small></td>
+                </tr>
+                <tr class="total_price" id="total_price_tablet">
+                    <td>Grand Total: </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td colspan="12">123</td>
+                </tr>
+<p></p>
+  <a href="{% url 'checkout' %}" class="btn btn-success">Checkout</a>
 
 {% endblock %}
+
