--- a/listings/templates/listings/confirm_delete.template.html
+++ b/listings/templates/listings/confirm_delete.template.html
@@ -2,7 +2,9 @@
 {%load static %}
 
 {%block content%}
-    
+
+<h3 class="mt-3">Delete Listing</h3>
+
     are you sure you want to delete the listing: {{listing}}
     <form method="POST">
         {% csrf_token %}
