--- a/listings/templates/listings/details.template.html
+++ b/listings/templates/listings/details.template.html
@@ -3,7 +3,7 @@
 {% load mathfilters %}
 
 {% block content %}
-<h3>Product Page</h3>
+<h3 class = "mt-3">Product Detail Page</h3>
 <div class ="col justify-content-center">
 <div class="card mb-3">
   <div class="row no-gutters">
@@ -15,12 +15,16 @@
       <div class="card-body">
         <h3 class="card-title">{{listing.title}}</h3>
         <p class="card-text">Description: {{listing.description}}</p>
-            SKU: {{listing.SKU}}
+        Price: ${{listing.cost|div:100|floatformat:2}}
+
             <p></p>Category: {{listing.category.category_name}}
             <p></p>
-Price: ${{listing.cost|div:100|floatformat:2}}
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            SKU: {{listing.SKU}}
+        <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+        <p></p>
         <a href="{% url 'add_to_cart' listing_id=listing.id %}" class="btn btn-primary">Add To Cart</a>
+        <a href="{% url 'update_listing_route' listing_id=listing.id %}" class="btn btn-warning">Edit Listing</a>
+        <a href="{% url 'delete_listing_route' listing_id=listing.id %}" class="btn btn-danger">Delete Listing</a>
       </div>
     </div>
   </div>
