--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -18,7 +18,7 @@
 <body>
    
     
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-warning">
     <div class="container">
   <a class="navbar-brand" href="{% url 'view_listing_route' %}">Chatuchak 365</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
     </form>
-    <ul class="navbar-nav my-2 my-lg-0 mr-3">
+    <ul class="navbar-nav my-2 my-lg-0 mr-2">
       <li class="nav-item active">
         <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
       </li>
