--- a/cart/templates/cart/view_cart.template.html
+++ b/cart/templates/cart/view_cart.template.html
@@ -3,62 +3,96 @@
 {% load cloudinary %}
 {% block content%}
 
-<h3 class="mt-3">My Cart</h3>
+<h3 class="mt-3 mb-3">My Cart</h3>
+
+    <!--empty cart view-->
+    {%for listing in cart.items %} 
+    {% empty %}
+    <div class="mt-4">
+        <h3>Your Cart is empty</h3>
+   <a href="{% url 'view_listing_route' %}" class="btn btn-primary mt-3 btn-block">Start Shopping</a>
+        
+    </div>
+    {% endfor %}
+
 
 <div class="row d-none d-md-block">
-        <table class="table cart">
-            <thead id="table_head">
-                <tr>
-                    <th scope="col">Image</th>
-                    <th scope="col">Product</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Subtotal</th>
-                    <th scope="col">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {%for key, listing in cart.items %}
-                <tr>
-                    <td>{% cloudinary listing.cover width=100 height=100 gravity="faces" crop="fill" %} </td>
-                    <td>{{listing.title}}</td>
-                    <td>
- <form method="POST" action="{% url 'update_cart_quantity' listing_id=listing.id%}">
-                {% csrf_token %}
-                <input type="text" value="{{listing.qty}}" name="qty" style="width:40px" />
-                <input class="btn btn-primary btn-sm" type="submit" value="Edit">
-            </form>
+    <table class="table cart">
+        <thead id="table_head">
+            <tr>
+                <th scope="col">Image</th>
+                <th scope="col">Product</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Price</th>
+                <th scope="col">Subtotal</th>
+                <th scope="col">Action</th>
+            </tr>
+        </thead>
+        <tbody>
 
-                    </td>
-                    <td>${{listing.price}}</td>
-                    <td>${{listing.price|mul:listing.qty|floatformat:2}}</td>
-                    <td>            <a href="{% url 'remove_from_cart' listing_id=listing.id %}" class="btn btn-danger btn-sm">Delete</a></td>
-                </tr>
+  {%for key, listing in cart.items%}
+            <tr>
+                <td>{% cloudinary listing.cover width=100 height=100 gravity="faces" crop="fill" %} </td>
+                <td>{{listing.title}}</td>
+                <td>
+                    <form method="POST" action="{% url 'update_cart_quantity' listing_id=listing.id%}">
+                        {% csrf_token %}
+                        <input type="text" value="{{listing.qty}}" name="qty" style="width:40px" />
+                        <input class="btn btn-primary btn-sm" type="submit" value="Edit">
+                    </form>
 
-                {%endfor%} 
-                
+                </td>
+                <td>${{listing.price|floatformat:2}}</td>
+                <td>${{listing.price|mul:listing.qty|floatformat:2}}</td>
+                <td> <a href="{% url 'remove_from_cart' listing_id=listing.id %}"
+                        class="btn btn-danger btn-sm">Delete</a></td>
+            </tr>
 
-                <tr class="delivery" id="delivery_tablet">
-                    <td>nil </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td colspan="12">nil</td>
-                </tr>
-                <tr class="free_delivery" id="free_delivery_tablet">
-                    <td colspan="12"><small>nil</small></td>
-                </tr>
-                <tr class="total_price" id="total_price_tablet">
-                    
-                    <td>Grand Total: ${{listing.price|mul:listing.qty|floatformat:2}} </td>
-        
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td colspan="12">$x</td>
-                </tr>
-<p></p>
-  <a href="{% url 'checkout' %}" class="btn btn-success">Checkout</a>
+          
+  {%endfor%}
 
+            <tr class="total_price">
+
+                <td>Grand Total: </td>
+
+                <td></td>
+                <td></td>
+                <td></td>
+                <td colspan="12"> ${{total_price} </td>
+</tr>
+</tbody>
+</table>
+</div>
+
+<!-- small screen -->
+
+  {%for key, listing in cart.items%}
+<div class="card d-md-none mb-4">
+    <div class="text-center mt-2">
+      {% cloudinary listing.cover width=220 height=220 gravity="faces" crop="fill"%}
+      </div>
+      <div class="card-body text-center">
+          <ul class="list-group list-group-flush">
+    <li class="list-group-item"> <b>Product:</b> {{listing.title}}</li>
+    <li class="list-group-item"> <b>Price:</b> ${{listing.price|floatformat:2}}</li>
+    <li class="list-group-item"><form method="POST" action="{% url 'update_cart_quantity' listing_id=listing.id%}">
+                        {% csrf_token %}
+                        <b>Quantity:</b> <input type="text" value="{{listing.qty}}" name="qty" style="width:40px"/>
+                        <input class="btn btn-primary btn-sm" type="submit" value="Edit">
+                    </form></li>
+    <li class="list-group-item">        <b>Subtotal:</b> ${{listing.price|mul:listing.qty|floatformat:2}}</li>
+  </ul>
+
+
+
+                    <a href="{% url 'remove_from_cart' listing_id=listing.id %}"
+                        class="btn btn-outline-danger btn-sm btn-block mt-3">Delete</a>
+</div>
+</div>
+
+
+  {%endfor%}
+
+  <a href="{% url 'checkout' %}" class="btn btn-success btn-block mt-3">Checkout ${{total_price}}</a>
+  
 {% endblock %}
-
