--- a/listings/templates/listings/details.template.html
+++ b/listings/templates/listings/details.template.html
@@ -3,16 +3,16 @@
 {% load mathfilters %}
 
 {% block content %}
-<h3 class = "mt-3">Product Detail Page</h3>
-<div class ="col justify-content-center">
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-6">
+<h3 class = "mt-4 mb-4">Product Detail Page</h3>
+<div class ="col">
+<div class="card">
+  <div class="row">
+    <div class="col-lg-6 text-center mt-4 mb-4">
       <!-- <img src="..." class="card-img" alt="..."> -->
       {% cloudinary listing.cover width=300 height=300 gravity="faces" crop="fill"%}
     </div>
-    <div class="col-md-6">
-      <div class="card-body">
+    <div class="col-lg-6">
+      <div class="card-body mt-1">
         <h3 class="card-title">{{listing.title}}</h3>
         <p class="card-text">Description: {{listing.description}}</p>
         <p></p>Category: {{listing.category.category_name}}
