--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -72,14 +72,14 @@ account info
 </nav>    
 
 
-    <div class="container">
+    <div class="container mt-3">
         {% if messages %}
-        <div class='alert alert-success'>
-            {% for message in messages %} <p>{{ message }}</p> {% endfor %}
-
+        <div class='alert alert-info'>
+            {% for message in messages %}
+            {{ message }}
+            {% endfor %}
         </div>
         {% endif %}
-
         {%block content%}{%endblock%}
     </div>
    </div>
