--- a/listings/templates/listings/create_listing.template.html
+++ b/listings/templates/listings/create_listing.template.html
@@ -4,13 +4,13 @@
 {%load static %}
 
 {%block content%}
-<h3 class="mt-3">Create New Listing</h3>
+<h3 class="mt-3 mb-3">Sell (Create New Listing)</h3>
 <div id="form">
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form|crispy }}
     <!-- {{ form.as_p }} -->
-    <input type="submit" />
+    <input type="submit" class="btn btn-primary btn-block mt-3 mb-3" />
 </form>
 </div>
 
