--- a/listings/templates/listings/details.template.html
+++ b/listings/templates/listings/details.template.html
@@ -11,35 +11,22 @@
       <!-- <img src="..." class="card-img" alt="..."> -->
       {% cloudinary listing.cover width=300 height=300 gravity="faces" crop="fill"%}
     </div>
-    <div class="col-lg-6">
-      <div class="card-body mt-1">
+    <div class="col-lg-6 text-justify">
+      <div class="card-body">
         <h3 class="card-title">{{listing.title}}</h3>
         <p class="card-text">Description: {{listing.description}}</p>
         <p></p>Category: {{listing.category.category_name}}
         <p></p>
         Price: ${{listing.price|div:100|floatformat:2}}
-        <p></p>
-        Seller: {{listing.seller}}
         <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
         <p></p>
-        <a href="{% url 'add_to_cart' listing_id=listing.id %}" class="btn btn-primary">Add To Cart</a>
-        <a href="{% url 'update_listing_route' listing_id=listing.id %}" class="btn btn-warning">Edit Listing</a>
-        <a href="{% url 'delete_listing_route' listing_id=listing.id %}" class="btn btn-danger">Delete Listing</a>
-      </div>
+        <a href="{% url 'add_to_cart' listing_id=listing.id %}" class="btn btn-warning btn-block">Add To Cart</a>
+        <a href="{% url 'update_listing_route' listing_id=listing.id %}" class="btn btn-secondary btn-block">Edit Listing</a>
+        <a href="{% url 'delete_listing_route' listing_id=listing.id %}" class="btn btn-dark btn-block">Delete Listing</a>
+</div>
     </div>
   </div>
 </div>
 </div>
-
-
-<p>
-
-</p>
-<p>
-
-</p>
-<p>
-    <!-- Seller: {{listing.seller.user}} -->
-</p>
-
+   <a href="{% url 'view_listing_route' %}" class="btn btn-primary mt-3 btn-block">Back to Shop Page</a>
 {% endblock %}
