--- a/listings/templates/listings/confirm_delete.template.html
+++ b/listings/templates/listings/confirm_delete.template.html
@@ -3,15 +3,15 @@
 
 {%block content%}
 
-<h3 class="mt-3">Delete Listing</h3>
+<h3 class="mt-3 mb-3">Delete Listing</h3>
 
-    are you sure you want to delete the listing: {{listing}}
+    <h5>Confirm delete listing with title: {{listing}} ?</h5>
     <form method="POST">
         {% csrf_token %}
-        Are you sure you want to delete?
-        <input type="submit" value ="Yes">
+    <input type="submit" value="Yes" class="btn btn-outline-danger btn-block mt-3 mb-3"/>
     </form>
 
+    <a href="{% url 'view_listing_route' %}" class="btn btn-primary mt-3 btn-block">No, back to Shop Page</a>
 {%endblock%}
 
 
