fix cart display logic if empty

--- a/listings/templates/listings/confirm_delete.template.html
+++ b/listings/templates/listings/confirm_delete.template.html
@@ -11,7 +11,7 @@
     <input type="submit" value="Yes" class="btn btn-outline-danger btn-block mt-3 mb-3"/>
     </form>
 
-    <a href="{% url 'view_listing_route' %}" class="btn btn-primary mt-3 btn-block">No, back to Shop Page</a>
+    <a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 btn-block">No, back to Shop Page</a>
 {%endblock%}
 
 
