--- a/cart/templates/cart/view_cart.template.html
+++ b/cart/templates/cart/view_cart.template.html
@@ -3,17 +3,15 @@
 {% load cloudinary %}
 {% block content%}
 
-<h3 class="mt-3 mb-3">My Cart</h3>
+<h3 class="mt-3 mb-3">My Cart: {{number_of_items}} item(s)</h3>
 
-    <!--empty cart view-->
-    {%for listing in cart.items %} 
-    {% empty %}
+    <!--if cart is empty-->
+    {%if not cart.items %} 
     <div class="mt-4">
         <h3>Your Cart is empty</h3>
-   <a href="{% url 'view_listing_route' %}" class="btn btn-primary mt-3 btn-block">Start Shopping</a>
-        
     </div>
-    {% endfor %}
+    {% else %}
+
 
 
 <div class="row d-none d-md-block">
@@ -26,8 +24,11 @@
                 <th scope="col">Price</th>
                 <th scope="col">Subtotal</th>
                 <th scope="col">Action</th>
+          
             </tr>
+                       
         </thead>
+
         <tbody>
 
   {%for key, listing in cart.items%}
@@ -60,6 +61,8 @@
                 <td></td>
                 <td colspan="12"> ${{total_price} </td>
 </tr>
+
+
 </tbody>
 </table>
 </div>
@@ -93,6 +96,12 @@
 
   {%endfor%}
 
-  <a href="{% url 'checkout' %}" class="btn btn-success btn-block mt-3">Checkout ${{total_price}}</a>
   
+
+  <a href="{% url 'checkout' %}" class="btn btn-warning btn-block mt-3">Checkout ${{total_price}}</a>
+
+{% endif %}
+
+  <a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 btn-block">Back to Shop Page</a>
+
 {% endblock %}
