--- a/listings/templates/listings/details.template.html
+++ b/listings/templates/listings/details.template.html
@@ -28,5 +28,5 @@
   </div>
 </div>
 </div>
-   <a href="{% url 'view_listing_route' %}" class="btn btn-primary mt-3 btn-block">Back to Shop Page</a>
+   <a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 btn-block">Back to Shop Page</a>
 {% endblock %}
