--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -1,11 +1,11 @@
-{% extends "account/base.html" %}
+{% extends "base.template.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+<h3>{% trans "Account Inactive" %}</h3>
 
 <p>{% trans "This account is inactive." %}</p>
 {% endblock %}
