--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,11 +1,11 @@
-{% extends "account/base.html" %}
+{% extends "base.template.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+<h3 class="mt-3 mb-3">{% trans "Sign Out" %}</h3>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
@@ -14,7 +14,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
+  <button type="submit" class="btn btn-primary btn-block mt-3">{% trans 'Sign Out' %}</button>
 </form>
 
 
