--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "base.template.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
+    <h3 class="mb-3 mt-3">{% trans "Password Reset" %}</h3>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
@@ -17,7 +17,7 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        <input type="submit" class="mt-3 mb-3 btn btn-primary btn-block" value="{% trans 'Reset My Password' %}" />
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
