--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,11 +1,11 @@
-{% extends "account/base.html" %}
+{% extends "base.template.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+    <h3>{% trans "Set Password" %}</h3>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
