--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -1,11 +1,11 @@
-{% extends "account/base.html" %}
+{% extends "base.template.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+<h3>{% trans "Sign Up Closed" %}</h3>
 
 <p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
 {% endblock %}
