--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -1,11 +1,11 @@
-{% extends "account/base.html" %}
+{% extends "base.template.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Verify Your E-mail Address" %}</h1>
+<h3>{% trans "Verify Your E-mail Address" %}</h3>
 
 {% url 'account_email' as email_url %}
 
