--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -7,6 +7,6 @@
 {% block content %}
     <h3 class="mt-3 mb-3">{% trans "Verify Your E-mail Address" %}</h3>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us at jyfoo213@gmail.com if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
 {% endblock %}
