hide CRUD buttons if not superuser

--- a/checkout/templates/checkout/payment_success.template.html
+++ b/checkout/templates/checkout/payment_success.template.html
@@ -5,7 +5,9 @@
 
 <h3 class="mt-3 mb-3">Payment Success!</h3>
 
-Thank you for your purchase!
+Thank you for your purchase! 
+<p>Your order will be processed in 3 working days.</p>
+<p>If you have any enquiries, please contact us at jyfoo213@gmail.com.</p>
 
 <a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 btn-block">Back to Shop Page</a>
 
