--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -36,7 +36,9 @@
         <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
       </li>
     <li class="nav-item active">
+         {% if user.is_authenticated and user.is_superuser %}
         <a class="nav-link" href="{% url 'create_listing' %}">Sell <span class="sr-only">(current)</span></a>
+        {% endif %}
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'view_cart' %}">Cart: ({{number_of_items}})</a>
