--- a/listings/templates/listings/details.template.html
+++ b/listings/templates/listings/details.template.html
@@ -6,14 +6,14 @@
 <h3 class = "mt-4 mb-4">Product Detail Page</h3>
 <div class ="col">
 <div class="card">
-  <div class="row">
-    <div class="col-lg-6 text-center mt-4 mb-4">
-      <!-- <img src="..." class="card-img" alt="..."> -->
-      {% cloudinary listing.cover width=300 height=300 gravity="faces" crop="fill"%}
-    </div>
-    <div class="col-lg-6 text-justify">
       <div class="card-body">
-        <h3 class="card-title">{{listing.title}}</h3>
+        <div class="row">
+    <div class="col-lg-6 mt-4 mb-4 text-center">
+      <!-- <img src="..." class="card-img" alt="..."> -->
+      {% cloudinary listing.cover width=275 height=275 gravity="faces" crop="fill"%}
+    </div>
+            <div class="col-lg-6 text-justify">
+        <h3 class="card-title mt-2">{{listing.title}}</h3>
         <p class="card-text">Description: {{listing.description}}</p>
         <p></p>Category: {{listing.category.category_name}}
         <p></p>
