--- a/listings/templates/listings/index.template.html
+++ b/listings/templates/listings/index.template.html
@@ -11,11 +11,11 @@
   <!-- <img class="card-img-top" alt="Card image cap"> -->
   <p></p>
   <div class="text-center">
-   {% cloudinary list.cover width=200 height=200 gravity="faces" crop="fill" %} 
+   {% cloudinary list.cover width=275 height=275 gravity="faces" crop="fill" %} 
   </div>
   <div class="card-body text-center">
     <h5 class="card-title">{{list.title}}</h5>
-    <h5 class="card-title">Price: ${{list.price|div:100|floatformat:2}}</h5>
+    <p>Price: ${{list.price|div:100|floatformat:2}}</p>
     <a href="{% url 'view_listing_details' listing_id=list.id %}" class="btn btn-success">View Details</a>
     <a href="{% url 'add_to_cart' listing_id=list.id %}" class="btn btn-warning">Add To Cart</a>
   </div>
