--- a/listings/templates/listings/index.template.html
+++ b/listings/templates/listings/index.template.html
@@ -2,8 +2,22 @@
 {% load cloudinary %}
 {%load static %}
 {% load mathfilters %}
+{% load crispy_forms_tags %}
 
 {%block content%}
+
+<h3 class="mt-3 mb-3">Search listings</h3>
+
+           <form method="GET">
+    {{search_form|crispy}}
+    <input type="submit" class="btn btn-primary btn-block mt-3 mb-3" value="Search"/>
+    </form>
+
+
+<p>
+        Search results:
+    </p>
+
 <div class ="col d-flex justify-content-center">
 <div class="card-deck">
 {% for list in listings %}
