--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+
 <!doctype html>
 <html lang="en">
 
@@ -28,9 +30,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       
         <form class="form-inline mr-auto">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-    </form>
+      <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
+
+
+      <!-- <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+    </form> -->
     <ul class="navbar-nav my-2 my-lg-0 mr-2">
       <li class="nav-item active">
         <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
