--- a/listings/templates/listings/index.template.html
+++ b/listings/templates/listings/index.template.html
@@ -6,36 +6,44 @@
 
 {%block content%}
 
-<h3 class="mt-3 mb-3">Search listings</h3>
+<h3 class="mt-3 mb-3">Listing Catalogue</h3>
 
-           <form method="GET">
+<div class="card">   
+ <div class="card-header pb-1 bg-white">  
+    <h5>Search & Filter</h5>
+</div>  
+    <div class="card-body">  
+
+
+                   <form method="GET">
     {{search_form|crispy}}
-    <input type="submit" class="btn btn-primary btn-block mt-3 mb-3" value="Search"/>
+    <input type="submit" class="btn btn-primary btn-block mt-3" value="Search"/>
     </form>
+    </div>   
+</div>  
 
 
-<p>
-        Search results:
-    </p>
-
-<div class ="col d-flex justify-content-center">
-<div class="card-deck">
+<div class ="">
+<div class="card-deck justify-content-center">
 {% for list in listings %}
-<div class="card mt-4" style="min-width: 18rem; max-width: 20rem;">
-  <!-- <img class="card-img-top" alt="Card image cap"> -->
-  <p></p>
+<div class="card mt-4" style="min-width: 18rem;">
   <div class="text-center">
+      <br>
    {% cloudinary list.cover width=275 height=275 gravity="faces" crop="fill" %} 
   </div>
   <div class="card-body text-center">
     <h5 class="card-title">{{list.title}}</h5>
-    <p>Price: ${{list.price|div:100|floatformat:2}}</p>
+    <b>Price:</b> ${{list.price|div:100|floatformat:2}}
+    <br><b>Category:</b> {{list.category}}
+    <p></p>
     <a href="{% url 'view_listing_details' listing_id=list.id %}" class="btn btn-success">View Details</a>
     <a href="{% url 'add_to_cart' listing_id=list.id %}" class="btn btn-warning">Add To Cart</a>
   </div>
 </div>
+
     {% endfor %}
 </div>
 </div>
+
 
 {%endblock%}
