--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -29,27 +29,20 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       
-        <form class="form-inline mr-auto">
-      <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
 
-
-      <!-- <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
-    <ul class="navbar-nav my-2 my-lg-0 mr-2">
+    <ul class="navbar-nav ml-auto my-2 my-lg-0 mr-2">
       <li class="nav-item active">
-        <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-      </li>
     <li class="nav-item active">
          {% if user.is_authenticated and user.is_superuser %}
-        <a class="nav-link" href="{% url 'create_listing' %}">Sell <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'create_listing' %}">Create Listing <span class="sr-only">(current)</span></a>
         {% endif %}
+      </li>
+        <a class="nav-link active" href="#">About <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'view_cart' %}">Cart: ({{number_of_items}})</a>
       </li>
-    <li class="nav-item active">
-        <a class="nav-link" href="#">Orders</a>
-      </li>
+
       <!-- <li class="nav-item active dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     
