--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -37,7 +37,7 @@
         <a class="nav-link" href="{% url 'create_listing' %}">Create Listing <span class="sr-only">(current)</span></a>
         {% endif %}
       </li>
-        <a class="nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="{% url 'about' %}">About <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'view_cart' %}">Cart: ({{number_of_items}})</a>
