--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -80,9 +80,15 @@ account info
         </div>
         {% endif %}
         {%block content%}{%endblock%}
+
+        </div>
+ 
+    <!-- footer --> 
+    <hr class="shadow-sm">
+     <div id="footer" class="text-right mb-3 mr-3">
+        &copy; Chatuchak 365 by Jiun Yang // 2020
+    <!-- end of container -->
     </div>
-   </div>
-    
 
 
     <!-- Optional JavaScript -->
