--- a/cart/templates/cart/view_cart.template.html
+++ b/cart/templates/cart/view_cart.template.html
@@ -5,15 +5,14 @@
 
 <h3 class="mt-3 mb-3">My Cart: {{number_of_items}} item(s)</h3>
 
-    <!--if cart is empty-->
-    {%if not cart.items %} 
-    <div class="mt-4">
-        <h3>Your Cart is empty</h3>
-    </div>
-    {% else %}
+<!--if cart is empty-->
+{%if not cart.items %}
+<div class="mt-4">
+    <h3>Your Cart is empty</h3>
+</div>
+{% else %}
 
-
-
+<!--table display for large screens-->
 <div class="row d-none d-md-block">
     <table class="table cart">
         <thead id="table_head">
@@ -24,14 +23,10 @@
                 <th scope="col">Price</th>
                 <th scope="col">Subtotal</th>
                 <th scope="col">Action</th>
-          
             </tr>
-                       
         </thead>
-
         <tbody>
-
-  {%for key, listing in cart.items%}
+            {%for key, listing in cart.items%}
             <tr>
                 <td>{% cloudinary listing.cover width=100 height=100 gravity="faces" crop="fill" %} </td>
                 <td>{{listing.title}}</td>
@@ -41,61 +36,50 @@
                         <input type="text" value="{{listing.qty}}" name="qty" style="width:40px" />
                         <input class="btn btn-primary btn-sm" type="submit" value="Edit">
                     </form>
-
                 </td>
                 <td>${{listing.price|floatformat:2}}</td>
                 <td>${{listing.price|mul:listing.qty|floatformat:2}}</td>
                 <td> <a href="{% url 'remove_from_cart' listing_id=listing.id %}"
                         class="btn btn-danger btn-sm">Delete</a></td>
             </tr>
-
-          
-  {%endfor%}
-
+            {%endfor%}
             <tr>
-
                 <td colspan="12"></td>
-</tr>
-
-</tbody>
-</table>
+            </tr>
+        </tbody>
+    </table>
 </div>
 
-<!-- small screen -->
-
-  {%for key, listing in cart.items%}
+<!-- card display for small screen -->
+{%for key, listing in cart.items%}
 <div class="card d-md-none mb-4">
     <div class="text-center mt-2">
-      {% cloudinary listing.cover width=275 height=275 gravity="faces" crop="fill"%}
-      </div>
-      <div class="card-body text-center">
-          <ul class="list-group list-group-flush">
-    <li class="list-group-item"> <b>Product:</b> {{listing.title}}</li>
-    <li class="list-group-item"> <b>Price:</b> ${{listing.price|floatformat:2}}</li>
-    <li class="list-group-item"><form method="POST" action="{% url 'update_cart_quantity' listing_id=listing.id%}">
-                        {% csrf_token %}
-                        <b>Quantity:</b> <input type="text" value="{{listing.qty}}" name="qty" style="width:40px"/>
-                        <input class="btn btn-primary btn-sm" type="submit" value="Edit">
-                    </form></li>
-    <li class="list-group-item">        <b>Subtotal:</b> ${{listing.price|mul:listing.qty|floatformat:2}}</li>
-  </ul>
-
-
-
-                    <a href="{% url 'remove_from_cart' listing_id=listing.id %}"
-                        class="btn btn-outline-danger btn-sm btn-block mt-3">Delete</a>
+        {% cloudinary listing.cover width=275 height=275 gravity="faces" crop="fill"%}
+    </div>
+    <div class="card-body text-center">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"> <b>Product:</b> {{listing.title}}</li>
+            <li class="list-group-item"> <b>Price:</b> ${{listing.price|floatformat:2}}</li>
+            <li class="list-group-item">
+                <form method="POST" action="{% url 'update_cart_quantity' listing_id=listing.id%}">
+                    {% csrf_token %}
+                    <b>Quantity:</b> <input type="text" value="{{listing.qty}}" name="qty" style="width:40px"/>
+                    <input class="btn btn-primary btn-sm" type="submit" value="Edit">
+                </form>
+            </li>
+            <li class="list-group-item"> <b>Subtotal:</b> ${{listing.price|mul:listing.qty|floatformat:2}}</li>
+        </ul>
+        <a href="{% url 'remove_from_cart' listing_id=listing.id %}"
+            class="btn btn-outline-danger btn-sm btn-block mt-3">Delete</a>
+    </div>
 </div>
-</div>
 
+{%endfor%}
 
-  {%endfor%}
-
-  
-
-  <a href="{% url 'checkout' %}" class="btn btn-warning btn-block mt-3">Checkout</a>
+<a href="{% url 'checkout' %}" class="btn btn-warning btn-block mt-3">Checkout</a>
 
 {% endif %}
 
-  <a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 btn-block">Back to Shop Page</a>
+<a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 btn-block">Back to Shop Page</a>
 
 {% endblock %}
