--- a/listings/templates/listings/create_listing.template.html
+++ b/listings/templates/listings/create_listing.template.html
@@ -4,16 +4,14 @@
 {%load static %}
 
 {%block content%}
-<h3 class="mt-3 mb-3">Sell (Create New Listing)</h3>
+<h3 class="mt-3 mb-3">Create New Listing</h3>
 <div id="form">
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <!-- {{ form.as_p }} -->
-    <input type="submit" class="btn btn-primary btn-block mt-3 mb-3" />
-</form>
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input type="submit" class="btn btn-primary btn-block mt-3 mb-3" />
+    </form>
 </div>
-
 
 <div class="status">
     <h5>Image Upload Status</h5>
@@ -21,7 +19,6 @@
 </div>
 
 <div class="uploaded_info_holder">
-
 </div>
 
 {%endblock%}
