deleted brand and seller model and review app

--- a/templates/about.template.html
+++ b/templates/about.template.html
@@ -4,8 +4,7 @@
 
 <div class="text-justify">
 Hello World!
-<p></p>
-Welcome to Chatuchak 365, an ecommerce platform for South-East-Asian street market products.
+<p>Welcome to Chatuchak 365, an ecommerce platform for South-East-Asian street market products.</p>
 <p></p>
 How did the name "Chatuchak 365" come about?
 <p></p>
