--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -63,7 +63,7 @@
     </div>
 
     <!-- footer -->
-    <hr class="shadow-sm">
+    <hr class="shadow-sm mt-5">
     <div id="footer" class="text-right mb-3 mr-3">
         &copy; Chatuchak 365 by Jiun Yang // 2020
         <!-- end of container -->
