--- a/templates/about.template.html
+++ b/templates/about.template.html
@@ -3,8 +3,10 @@
 {% block content%}
 
 <div class="text-justify">
-Hello World!
-<p>Welcome to Chatuchak 365, an ecommerce platform for South-East-Asian street market products.</p>
+
+<h3 class="mt-3 mb-3">Hello World!</h3>
+<p></p>
+Welcome to Chatuchak 365, an ecommerce platform for South-East-Asian street market products.
 <p></p>
 How did the name "Chatuchak 365" come about?
 <p></p>
