added return to home page buttons on various pages

--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -16,6 +16,6 @@
   {% endif %}
   <button type="submit" class="btn btn-primary btn-block mt-3">{% trans 'Sign Out' %}</button>
 </form>
-
+<a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 mb-3 btn-block">Back to Shop Page</a>
 
 {% endblock %}
