--- a/listings/templates/listings/create_listing.template.html
+++ b/listings/templates/listings/create_listing.template.html
@@ -13,6 +13,8 @@
     </form>
 </div>
 
+<a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 mb-3 btn-block">Back to Shop Page</a>
+
 <div class="status">
     <h5>Image Upload Status</h5>
     <span class="status_value">Pending upload by user</span>
