--- a/listings/templates/listings/index.template.html
+++ b/listings/templates/listings/index.template.html
@@ -6,7 +6,7 @@
 
 {%block content%}
 
-<h3 class="mt-3 mb-3">Listing Catalogue</h3>
+<h3 class="mt-3 mb-3">Shop Page</h3>
 
 <div class="card">
     <div class="card-header pb-1 bg-white">
