--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -41,5 +41,6 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% endif %}
   <button class="primaryAction btn btn-primary btn-block mt-3" type="submit">{% trans "Sign In" %}</button>
 </form>
+<a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 mb-3 btn-block">Back to Shop Page</a>
 
 {% endblock %}
