--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -17,5 +17,6 @@
   {% endif %}
   <button type="submit" class="mt-3 btn btn-primary btn-block">{% trans "Sign Up" %} &raquo;</button>
 </form>
+<a href="{% url 'view_listing_route' %}" class="btn btn-success mt-3 mb-3 btn-block">Back to Shop Page</a>
 
 {% endblock %}
