start to work on readme

--- a/templates/about.template.html
+++ b/templates/about.template.html
@@ -6,7 +6,7 @@
 
 <h3 class="mt-3 mb-3">Hello World!</h3>
 <p></p>
-Welcome to Chatuchak 365, an ecommerce platform for South-East-Asian street market products.
+Welcome to Chatuchak 365, an ecommerce platform for Southeast Asian street market products.
 <p></p>
 How did the name "Chatuchak 365" come about?
 <p></p>
@@ -15,9 +15,9 @@ Chatuchak attracts 200,000 visitors every weekend, and offers a variety of local
 <p></p>
 With the Covid-19 pandemic, it has become increasingly difficult for locals and tourists to travel and visit such vibrant street markets, and for local businesses to maintain their livelihoods.
 <p></p>
-Therefore, "365" represents the concept of "Chatuchak" going online, being accessible all year round, anytime, anywhere. This is especially important in a pandemic like this. Chatuchak 365 simply aims to help South East Asian locals maintain their livelihood through ecommerce, while providing an avenue for international visitors to continue to shop for the street market products that they love.
+Therefore, "365" represents the concept of "Chatuchak" going online, being accessible all year round, anytime, anywhere. This is especially important in a pandemic like this. Chatuchak 365 simply aims to help Southeast Asian locals maintain their livelihood through ecommerce, while providing an avenue for international visitors to continue to shop for the street market products that they love.
 <p></p>
-Here at Chatuchak 365, expect to find similar products you may find in Chatuchak Thailand, or other South East Asian street markets.
+Here at Chatuchak 365, expect to find similar products you may find in Chatuchak Thailand, or other Southeast Asian street markets.
 <p></p>
 You may browse listings as a guest, or create an account if you'd like to add products to cart for checkout and purchase.
 <p></p>
